--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "allowJs": true
+    "allowJs": true,
+    "noImplicitReturns": true,
   },
   "exclude": ["node_modules", "public", ".cache"],
   "include": [
