--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
     "@types/react-test-renderer": "^16.9.1",
+    "@types/testing-library__cypress": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "axe-core": "^3.4.1",
@@ -42,6 +44,7 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
+    "gatsby-cypress": "^0.2.19",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
