--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "allowJs": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": true
   },
   "exclude": ["node_modules", "public", ".cache"],
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
