--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-react-axe": "^0.3.0",
-    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-react-helmet-async": "^1.0.13",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
@@ -21,7 +21,7 @@
     "ionicons": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet-async": "^1.0.4"
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
@@ -30,7 +30,6 @@
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "@types/react-helmet": "^5.0.14",
     "@types/react-test-renderer": "^16.9.1",
     "@types/testing-library__cypress": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
