--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "ionicons": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet-async": "^1.0.4"
+    "react-helmet-async": "^1.0.4",
+    "typography": "^0.16.19",
+    "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
@@ -32,6 +34,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.1",
     "@types/testing-library__cypress": "^5.0.1",
+    "@types/typography": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "axe-core": "^3.4.1",
