--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "gatsby-plugin-react-helmet-async": "^1.0.13",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-typescript": "^2.1.23",
+    "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-images": "^3.1.39",
+    "gatsby-remark-prismjs": "^3.3.29",
+    "gatsby-remark-smartypants": "^2.1.19",
     "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
     "ionicons": "^4.6.3",
+    "prismjs": "^1.18.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
+    "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-github": "^0.16.19"
   },
