--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
@@ -58,7 +60,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "react-test-renderer": "^16.12.0",
     "start-server-and-test": "^1.10.6",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
