--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.1",
     "@types/testing-library__cypress": "^5.0.1",
+    "@types/testing-library__jest-dom": "git://github.com/vagonpidarasov/jest-dom.git",
     "@types/typography": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "gatsby-cypress": "^0.2.19",
+    "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
@@ -82,6 +84,12 @@
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format",
+      "pre-push": "npm run format && npm test"
+    }
   },
   "repository": {
     "type": "git",
