--- a/package.json
+++ b/package.json
@@ -1,37 +1,16 @@
 {
   "name": "gatsby-starter-ionic",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "description": "A starter for Gatsby integrated with Ionic + Typescript and TDD-ready",
   "version": "0.0.1",
   "author": "Barry Low <barry@studiobear.co>",
   "dependencies": {
-    "@ionic/react": "^4.11.7",
-    "classnames": "^2.2.6",
-    "gatsby": "^2.18.17",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-codegen": "^1.0.14",
-    "gatsby-plugin-manifest": "^2.2.34",
-    "gatsby-plugin-offline": "^3.0.30",
-    "gatsby-plugin-react-axe": "^0.3.0",
-    "gatsby-plugin-react-helmet-async": "^1.0.13",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-typescript": "^2.1.23",
-    "gatsby-plugin-typography": "^2.3.20",
-    "gatsby-remark-copy-linked-files": "^2.1.33",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-remark-prismjs": "^3.3.29",
-    "gatsby-remark-smartypants": "^2.1.19",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-remark": "^2.6.45",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "ionicons": "^4.6.3",
-    "prismjs": "^1.18.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet-async": "^1.0.4",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-github": "^0.16.19"
+    "@studiobear/core": "file:packages/core",
+    "@studiobear/gatsby-theme-blog": "file:packages/gatsby-theme-blog",
+    "@studiobear/gatsby-theme-ionic": "file:packages/gatsby-theme-ionic"
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.0.2",
@@ -69,13 +48,12 @@
   },
   "keywords": [
     "gatsby",
-    "ionic",
     "typescript"
   ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "cd packages/core && yarn develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "start": "npm run develop",
@@ -97,5 +75,8 @@
   },
   "bugs": {
     "url": "https://gitlab.com/studiobear/gatsby-starter-ionic/issues"
+  },
+  "engines": {
+    "node": "10.16.0"
   }
 }
