Add gatsby configs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,7 @@
   "author": "Barry Low <barry@studiobear.co>",
   "dependencies": {
     "@ionic/react": "^4.11.7",
+    "@studiobear/gatsby-theme-ionic": "file:../gatsby-theme-ionic",
     "classnames": "^2.2.6",
     "gatsby": "^2.18.17",
     "gatsby-plugin-codegen": "^1.0.14",
