Tests running in monorepo

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "jest-preset-gatsby": "^1.0.26",
     "prettier": "^1.19.1",
     "start-server-and-test": "^1.10.6",
     "ts-jest": "^24.2.0",
@@ -59,7 +60,11 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "jest",
-    "test:watch": "npm test -- --watch",
+    "test:all": "yarn test:core --passWithNoTests && yarn test:ionic --passWithNoTests",
+    "test:core": "cd packages/core && yarn test",
+    "test:blog": "cd packages/gatsby-theme-blog && yarn test",
+    "test:ionic": "cd packages/gatsby-theme-ionic && yarn test",
+    "test:watch": "yarn test --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
