--- a/packages/gatsby-theme-blog/package.json
+++ b/packages/gatsby-theme-blog/package.json
@@ -4,6 +4,7 @@
   "description": "Studiobear Gatsby theme that adds a markdown-source blog",
   "version": "0.0.1",
   "author": "Barry Low <barry@studiobear.co>",
+  "main":"src",
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "classnames": "^2.2.6",
