--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,9 +4,7 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "composite": true,
-    "outDir": "lib",
-    "rootDir": "src",
-    "baseUrl": "src"
+    "noEmit": true
   },
   "references": [{ "path": "../gatsby-theme-ionic" }, { "path": "../gatsby-theme-blog" }]
 }
