--- a/packages/gatsby-theme-ionic/package.json
+++ b/packages/gatsby-theme-ionic/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@studiobear/gatsby-theme-ionic",
   "description": "Shared-UI components for Studiobear Gatsby Typescript + Testing",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Barry Low <barry@studiobear.co>",
   "publishConfig": {
     "access": "public"
   },
-  "main":"src",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "classnames": "^2.2.6",
@@ -42,11 +43,15 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
+    "type-build": "tsc",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^5.0.15"
   }
 }
