--- a/packages/gatsby-theme-ionic/package.json
+++ b/packages/gatsby-theme-ionic/package.json
@@ -8,6 +8,7 @@
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "files": ["lib/**/*"],
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "classnames": "^2.2.6",
