--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -1,36 +1,20 @@
 {
-  "name": "@studiobear/gatsby-theme-ionic",
-  "description": "Shared-UI components for Studiobear Gatsby Typescript + Testing",
-  "version": "0.0.4",
+  "name": "@studiobear/shared-ui-ionic",
+  "description": "Shared-UI Ionic components for Studiobear Gatsby Typescript + Testing",
+  "version": "0.0.1",
   "author": "Barry Low <barry@studiobear.co>",
   "publishConfig": {
     "access": "public"
   },
-  "main": "lib/index",
-  "typings": "lib/index",
-  "files": ["lib/**/*"],
+  "main": "./dist/index",
+  "module": "./dist-esm/index",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "classnames": "^2.2.6",
     "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.37",
-    "gatsby-plugin-codegen": "^1.0.14",
-    "gatsby-plugin-manifest": "^2.2.34",
-    "gatsby-plugin-offline": "^3.0.30",
-    "gatsby-plugin-react-axe": "^0.3.0",
-    "gatsby-plugin-react-helmet-async": "^1.0.13",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-typescript": "^2.1.23",
-    "gatsby-plugin-typography": "^2.3.20",
-    "gatsby-remark-copy-linked-files": "^2.1.33",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-remark-prismjs": "^3.3.29",
-    "gatsby-remark-smartypants": "^2.1.19",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-remark": "^2.6.45",
-    "gatsby-transformer-sharp": "^2.3.9",
     "ionicons": "^4.6.3",
-    "prismjs": "^1.18.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
@@ -44,7 +28,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
-    "type-build": "tsc",
+    "type-build": "tsc && tsc --build tsconfig.esm.json",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "jest",
