--- a/packages/shared-ui-ionic/tsconfig.esm.json
+++ b/packages/shared-ui-ionic/tsconfig.esm.json
@@ -1,20 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
-  "exclude": ["**/__tests__", "**/__mocks__"],
-  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*", "**/*.story.*"],
+  "include": ["src"],
   "compilerOptions": {
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "target": "esnext",
     "jsx": "react",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "declaration": true,
-    "outDir": "dist",
+    "composite": true,
+    "outDir": "dist-esm",
     "rootDir": "src",
     "baseUrl": ".",
     "typeRoots": ["src/types"],
-    "composite": true,
-    "noEmit": true
-  },
-  "references": [{ "path": "../gatsby-theme-ionic" }, { "path": "../gatsby-theme-blog" }]
+    "types": ["node", "react-helmet"]
+  }
 }
