--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,15 +4,16 @@
   "description": "A starter for Gatsby integrated with Ionic + Typescript and TDD-ready",
   "version": "0.0.1",
   "author": "Barry Low <barry@studiobear.co>",
-  "main":"src",
+  "main": "src",
   "dependencies": {
     "@ionic/react": "^4.11.7",
-    "@studiobear/shared-ui-ionic": "^0.0.1",
+    "@studiobear/shared-ui-ionic": "^0.0.2",
     "classnames": "^2.2.6",
     "gatsby": "^2.18.17",
     "gatsby-plugin-codegen": "^1.0.14",
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-offline": "^3.0.30",
+    "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
     "ionicons": "^4.6.3",
