--- a/packages/gatsby-theme-blog/package.json
+++ b/packages/gatsby-theme-blog/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "classnames": "^2.2.6",
-    "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-codegen": "^1.0.14",
     "gatsby-plugin-manifest": "^2.2.34",
@@ -27,11 +26,14 @@
     "gatsby-transformer-sharp": "^2.3.9",
     "ionicons": "^4.6.3",
     "prismjs": "^1.18.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-github": "^0.16.19"
+  },
+  "devDependencies": {
+    "gatsby": "^2.18.17",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
