--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@studiobear/shared-ui-ionic": "file:packages/shared-ui-ionic"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -36,12 +37,15 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
+    "gatsby": "^2.18.17",
     "gatsby-cypress": "^0.2.19",
     "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-preset-gatsby": "^1.0.26",
     "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "start-server-and-test": "^1.10.6",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
