--- a/packages/gatsby-theme-blog/package.json
+++ b/packages/gatsby-theme-blog/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@studiobear/gatsby-theme-blog",
-  "private": true,
   "description": "Studiobear Gatsby theme that adds a markdown-source blog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Barry Low <barry@studiobear.co>",
-  "main":"src",
+  "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@ionic/react": "^4.11.7",
+    "@studiobear/shared-ui-ionic": "^0.0.4",
     "classnames": "^2.2.6",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-codegen": "^1.0.14",
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-offline": "^3.0.30",
+    "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-react-axe": "^0.3.0",
     "gatsby-plugin-react-helmet-async": "^1.0.13",
     "gatsby-plugin-sharp": "^2.3.10",
@@ -32,8 +36,19 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
+    "@types/node": "^13.1.8",
     "gatsby": "^2.18.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
-  }
+  },
+  "peerDependencies": {
+    "gatsby": "^2.18.17",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "keywords": [
+    "gatsby",
+    "gatsby-theme",
+    "gatsby-plugin"
+  ]
 }
