--- a/packages/gatsby-theme-blog/tsconfig.json
+++ b/packages/gatsby-theme-blog/tsconfig.json
@@ -3,11 +3,16 @@
   "exclude": ["**/__tests__", "**/__mocks__"],
   "include": ["src/**/*"],
   "compilerOptions": {
-    "composite": true,
     "outDir": "lib",
     "rootDir": "src",
     "baseUrl": "src",
     "target": "esnext",
-    "module": "esnext"
-  }
+    "module": "commonjs",
+    "composite": true,
+    "noEmit": true,
+    "lib": ["dom", "es2015", "es2017"],
+    "moduleResolution": "node",
+    "typeRoots": ["src/types", "../../../node_modules/@types"]
+  },
+  "references": [{ "path": "../shared-ui-ionic" }, { "path": "../core" }]
 }
