--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,17 @@
 {
-  "lerna": "3.20.2",
-  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent"
+  "version": "independent",
+  "loglevel": "success",
+  "registry": "https://registry.npmjs.org/",
+  "ignoreChanges": ["CHANGELOG.md", "**/__tests__/**", "**/__mocks__/**", "**/__testfixtures__/**"],
+  "stream": true,
+  "command": {
+    "publish": {
+      "allowBranch": "master",
+      "bump": "patch",
+      "conventionalCommits": true,
+      "message": "chore(release): Publish"
+    }
+  }
 }
