--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
   "compilerOptions": {
-    "composite": true
+    "target": "esnext",
+    "module": "commonjs",
+    "jsx": "react",
+    "lib": ["dom", "es2015", "esnext"],
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noEmit": true,
+    // "skipLibCheck": true, // Use only for faster builds; hides misconfigs/conflicts
+    "esModuleInterop": true
   },
-  "files": [],
-  "include": []
+  "include": ["./apps/**/src/**/*", "./gatsby-dev/**/src/**/*", "./libs/**/src/**/*"],
+  "exclude": ["node_modules", "gatsby-dev/**/node_modules", "**/.*/"]
 }
