--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -39,5 +39,8 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.15"
+  },
+  "peerDependencies": {
+    "gatsby-plugin-react-helmet-async": "^1.0.14"
   }
 }
