--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-react-axe": "^0.3.0",
+    "gatsby-plugin-react-helmet-async": "^1.0.14",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
     "ionicons": "^4.6.3",
