--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@ionic/react": "^4.11.7",
     "@studiobear/gatsby-theme-blog-ionic": "file:../../packages/gatsby-theme-blog-ionic",
-    "@studiobear/shared-ui-ionic": "^0.0.7",
+    "@studiobear/shared-ui-ionic": "^0.0.8",
     "@studiobear/shared-utils": "file:../../packages/shared-utils",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.5",
@@ -21,6 +21,7 @@
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
     "ionicons": "^4.6.3",
+    "jest": "24.9.0",
     "prismjs": "^1.18.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
