[gatsby-theme-blog-ionic] create package

--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.2",
     "@types/react-helmet": "^5.0.15",
-    "jest": "24.9.0",
+    "jest": "^25.1.0",
     "typescript": "^3.7.4"
   }
 }
