--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -10,7 +10,7 @@
   "module": "./dist-esm/index",
   "types": "./dist/index.d.ts",
   "devDependencies": {
-    "jest": "24.9.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "typescript": "^3.7.4"
   },
