--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -41,6 +41,7 @@
     "@testing-library/jest-dom": "^5.0.2",
     "@types/react-helmet": "^5.0.15",
     "jest": "^25.1.0",
+    "ts-jest": "25.0.0",
     "typescript": "^3.7.4"
   }
 }
