--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
     "gatsby-cypress": "^0.2.19",
     "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
+    "jest":"^25.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "start-server-and-test": "^1.10.6",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
