--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "ts-jest": "25.0.0",
     "typescript": "^3.7.4"
   },
   "license": "MIT",
