--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -21,7 +21,6 @@
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
     "ionicons": "^4.6.3",
-    "jest": "24.9.0",
     "prismjs": "^1.18.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -29,7 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@testing-library/cypress": "^5.0.2",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^24.0.25",
@@ -38,7 +37,6 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.1",
     "@types/testing-library__cypress": "^5.0.1",
-    "@types/testing-library__jest-dom": "git://github.com/vagonpidarasov/jest-dom.git",
     "@types/typography": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -64,7 +62,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "start-server-and-test": "^1.10.6",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "25.0.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
