--- a/packages/gatsby-theme-blog-ionic/package.json
+++ b/packages/gatsby-theme-blog-ionic/package.json
@@ -3,7 +3,7 @@
   "description": "Gatsby theme with typescript and storybook built in. Based on gatsby-theme-typescript by Mae Capozzi",
   "version": "0.0.1",
   "main": "index.js",
-  "author": "Dan Spratling",
+  "author": "Barry Low <barry@studiobear.co>",
   "license": "MIT",
   "keywords": [
     "gatsby-theme",
@@ -45,10 +45,11 @@
     "@ionic/react": "^4.11.10",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
-    "@studiobear/shared-ui-ionic": "^0.0.8",
+    "@studiobear/shared-ui-ionic": "^0.0.9",
     "@studiobear/shared-utils": "file:../shared-utils",
     "gatsby-core-utils": "^1.0.26",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-react-helmet-async": "^1.0.14",
@@ -56,10 +57,11 @@
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-remark-copy-linked-files": "^2.1.36",
     "gatsby-remark-images": "^3.1.42",
+    "gatsby-remark-prismjs": "^3.3.30",
     "gatsby-remark-smartypants": "^2.1.20",
-    "gatsby-theme-blog-core": "^1.0.60",
     "gatsby-transformer-sharp": "^2.3.13",
     "ionicons": "^4.6.3",
-    "react-helmet-async": "^1.0.4"
+    "react-helmet-async": "^1.0.4",
+    "remark-slug": "^5.1.2"
   }
 }
