--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -43,5 +43,6 @@
     "jest": "^25.1.0",
     "ts-jest": "25.0.0",
     "typescript": "^3.7.4"
-  }
+  },
+  "gitHead": "6200917235388cc135575c57380a381e433e2210"
 }
