--- a/packages/gatsby-theme-blog-ionic/package.json
+++ b/packages/gatsby-theme-blog-ionic/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Barry Low <barry@studiobear.co>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "gatsby-theme",
     "typescript",
@@ -46,7 +49,7 @@
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "@studiobear/shared-ui-ionic": "^0.0.11",
-    "@studiobear/shared-utils": "file:../shared-utils",
+    "@studiobear/shared-utils": "^0.0.3",
     "gatsby-core-utils": "^1.0.26",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
     "gatsby-plugin-feed-mdx": "^1.0.1",
@@ -63,5 +66,6 @@
     "ionicons": "^4.6.3",
     "react-helmet-async": "^1.0.4",
     "remark-slug": "^5.1.2"
-  }
+  },
+  "gitHead": "6200917235388cc135575c57380a381e433e2210"
 }
