--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -24,5 +24,6 @@
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
-  }
+  },
+  "gitHead": "6200917235388cc135575c57380a381e433e2210"
 }
