--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
+    "lerna": "^3.20.2",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
