--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "jest",
-    "test:all": "yarn test:core --passWithNoTests && yarn test:ionic --passWithNoTests",
+    "test:all": "yarn test --passWithNoTests",
     "test:core": "cd packages/core && yarn test",
     "test:blog": "cd packages/gatsby-theme-blog && yarn test",
     "test:ui": "cd packages/shared-ui-ionic && yarn test",
