--- a/packages/gatsby-theme-blog-ionic/package.json
+++ b/packages/gatsby-theme-blog-ionic/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
+    "test": "jest  --passWithNoTests",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
     "storybook": "start-storybook -p 6006",
