--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -32,7 +32,7 @@
     "copy-styles": "rm -rf ./dist/styles & rm -rf ./dist-esm/styles && cp -Rf ./src/styles ./dist/styles && cp -Rf ./src/styles ./dist-esm/styles",
     "start": "yarn develop",
     "serve": "gatsby serve",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
