--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -20,7 +20,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "type-build": "tsc && tsc --build tsconfig.esm.json",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
