--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -73,7 +73,7 @@
     "type-check": "tsc --noEmit",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch"
   }
 }
