--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "lerna run develop --scope core",
+    "develop:clean": "lerna clean --yes && lerna bootstrap && yarn workspace core gatsby clean && yarn workspace core gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "types:ui": "cd packages/shared-ui-ionic && yarn type-build",
     "type-check": "tsc --noEmit",
@@ -26,15 +27,42 @@
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
     "commitmsg": "commitlint -e $GIT_PARAMS"
   },
-  "devDependencies": {
+  "keywords": [
+    "gatsby",
+    "typescript"
+  ],
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run format",
+      "pre-push": "yarn run format && npm test:all"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/studiobear/gatsby-starter-typescript-testing.git"
+  },
+  "bugs": {
+    "url": "https://gitlab.com/studiobear/gatsby-starter-typescript-testing/issues"
+  },
+  "resolutions": {
+    "cypress": "^3.8.2"
+  },
+  "dependencies": {
     "@babel/core": "^7.8.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@manypkg/cli": "^0.9.0",
     "@testing-library/cypress": "^5.0.2",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
     "@types/cypress": "^1.1.3",
-    "@types/jest": "24.0.25",
+    "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -69,31 +97,5 @@
     "ts-jest": "^25.0.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
-  },
-  "keywords": [
-    "gatsby",
-    "typescript"
-  ],
-  "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run format",
-      "pre-push": "yarn run format && npm test:all"
-    }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://gitlab.com/studiobear/gatsby-starter-typescript-testing.git"
-  },
-  "bugs": {
-    "url": "https://gitlab.com/studiobear/gatsby-starter-typescript-testing/issues"
-  },
-  "resolutions": {
-    "cypress": "^3.8.2"
   }
 }
