--- a/packages/gatsby-theme-blog-ionic/package.json
+++ b/packages/gatsby-theme-blog-ionic/package.json
@@ -28,7 +28,7 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.8.3",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
     "@storybook/addons": "^5.1.11",
@@ -39,17 +39,17 @@
     "gatsby": "^2.19.5",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
-    "ts-jest": "25.0.0",
+    "ts-jest": "^25.0.0",
     "typescript": "^3.7.4"
   },
   "dependencies": {
     "@ionic/react": "^4.11.10",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
-    "@studiobear/shared-ui-ionic": "^0.0.11",
+    "@studiobear/shared-ui-ionic": "^0.0.12",
     "@studiobear/shared-utils": "^0.0.3",
     "gatsby-core-utils": "^1.0.26",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
