--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "ts-jest": "25.0.0",
+    "ts-jest": "^25.0.0",
     "typescript": "^3.7.4"
   },
   "license": "MIT",
@@ -26,5 +26,7 @@
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "gitHead": "6200917235388cc135575c57380a381e433e2210",
-  "resolutions": { "upath": "1.2.0" }
+  "resolutions": {
+    "upath": "1.2.0"
+  }
 }
