--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -6,10 +6,10 @@
   "author": "Barry Low <barry@studiobear.co>",
   "main": "src/index.js",
   "dependencies": {
-    "@ionic/react": "^4.11.7",
-    "@studiobear/gatsby-theme-blog-ionic": "file:../../packages/gatsby-theme-blog-ionic",
-    "@studiobear/shared-ui-ionic": "^0.0.11",
-    "@studiobear/shared-utils": "file:../../packages/shared-utils",
+    "@ionic/react": "^4.11.10",
+    "@studiobear/gatsby-theme-blog-ionic": "0.0.2",
+    "@studiobear/shared-ui-ionic": "^0.0.12",
+    "@studiobear/shared-utils": "0.0.3",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.5",
     "gatsby-plugin-codegen": "^1.0.14",
@@ -18,7 +18,7 @@
     "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-react-axe": "^0.3.0",
     "gatsby-plugin-react-helmet-async": "^1.0.14",
-    "gatsby-plugin-typescript": "^2.1.23",
+    "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-source-filesystem": "^2.1.43",
     "ionicons": "^4.6.3",
     "prismjs": "^1.18.0",
@@ -52,22 +52,19 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "gatsby": "^2.19.5",
     "gatsby-cypress": "^0.2.19",
     "husky": "^4.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "jest-preset-gatsby": "^1.0.26",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "start-server-and-test": "^1.10.6",
-    "ts-jest": "25.0.0",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby clean && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
