--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@manypkg/cli": "^0.9.0",
+    "@octokit/core": "^2.2.0",
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
