--- a/packages/gatsby-theme-blog-ionic/package.json
+++ b/packages/gatsby-theme-blog-ionic/package.json
@@ -49,7 +49,7 @@
     "@ionic/react": "^4.11.10",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
-    "@studiobear/shared-ui-ionic": "^0.0.12",
+    "@studiobear/shared-ui-ionic": "^0.0.14",
     "@studiobear/shared-utils": "^0.0.3",
     "gatsby-core-utils": "^1.0.26",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
@@ -65,6 +65,7 @@
     "gatsby-remark-smartypants": "^2.1.20",
     "gatsby-transformer-sharp": "^2.3.13",
     "ionicons": "^4.6.3",
+    "prismjs": "^1.19.0",
     "react-helmet-async": "^1.0.4",
     "remark-slug": "^5.1.2"
   },
