--- a/packages/shared-ui-ionic/package.json
+++ b/packages/shared-ui-ionic/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@studiobear/shared-ui-ionic",
   "description": "Shared-UI Ionic components for Studiobear Gatsby Typescript + Testing",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "author": "Barry Low <barry@studiobear.co>",
   "publishConfig": {
     "access": "public"
@@ -11,6 +11,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@ionic/react": "^4.11.10",
+    "@loadable/component": "^5.12.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.5",
     "gatsby-image": "^2.2.37",
@@ -39,10 +40,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.2",
+    "@types/loadable__component": "^5.10.0",
     "@types/react-helmet": "^5.0.15",
     "jest": "^25.1.0",
     "ts-jest": "^25.0.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "typescript-loadable-components-plugin": "^1.0.0"
   },
   "gitHead": "6200917235388cc135575c57380a381e433e2210"
 }
