--- a/sites/core/tsconfig.json
+++ b/sites/core/tsconfig.json
@@ -25,6 +25,7 @@
     "noEmit": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "composite": false
   }
 }
