--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "license": "MIT",
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run format",
-      "pre-push": "yarn run format && npm test:all"
+      "pre-commit": "yarn format && yarn monorepo-check",
+      "pre-push": "yarn format && yarn test:all"
     }
   },
   "commitlint": {
@@ -77,7 +77,7 @@
     "@typescript-eslint/parser": "^2.14.0",
     "axe-core": "^3.4.1",
     "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.26",
+    "babel-preset-gatsby": "^0.2.27",
     "cypress": "^3.8.2",
     "cypress-axe": "^0.5.3",
     "eslint": "^6.8.0",
