--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -7,8 +7,9 @@
   "main": "src/index.js",
   "dependencies": {
     "@ionic/react": "^4.11.10",
-    "@studiobear/gatsby-theme-blog-ionic": "0.0.2",
-    "@studiobear/shared-ui-ionic": "^0.0.15",
+    "@loadable/component": "^5.12.0",
+    "@studiobear/gatsby-theme-blog-ionic": "0.0.3",
+    "@studiobear/shared-ui-ionic": "^0.0.16",
     "@studiobear/shared-utils": "0.0.3",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.5",
@@ -27,11 +28,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "@testing-library/cypress": "^5.0.2",
     "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^24.0.25",
+    "@types/loadable__component": "^5.10.0",
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -42,7 +46,7 @@
     "@typescript-eslint/parser": "^2.14.0",
     "axe-core": "^3.4.1",
     "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.26",
+    "babel-preset-gatsby": "^0.2.27",
     "cypress": "^3.8.2",
     "cypress-axe": "^0.5.3",
     "eslint": "^6.8.0",
@@ -61,7 +65,8 @@
     "start-server-and-test": "^1.10.6",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5"
   },
   "scripts": {
     "build": "gatsby clean && gatsby build",
