patch: semaphore manually add shared-utils

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,6 +25,7 @@ blocks:
             - nvm use 10
             - checkout
             - cache restore
+            - yarn workspace core add @studiobear/shared-utils
             - yarn workspace core gatsby build
 promotions:
   - name: Production deploy
