feat: limit auto-promote + add badges

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -32,4 +32,4 @@ promotions:
   - name: Production deploy
     pipeline_file: production-deploy.yml
     auto_promote:
-      when: result = 'passed'
+      when: result = 'passed' and (branch = 'master')
